# onlinegame

./: .gitignore  configure.ac
lib/: Makefile.am  coord.cpp  coord.h  game.cpp  game.h  iview.h  level.cpp  level.h  matrix.hpp  subject.h
src/: Makefile.am  controller.cpp  controller.h  game.cpp  game.h  iview.h  main.cpp  view.cpp  view.h  view_alter.cpp  view_alter.h  view_basic.cpp  view_basic.h  view_color.cpp  view_color.h
tests/: Makefile.am  coord_tests.cpp  game_tests.cpp  level_tests.cpp
